Wed Nov 21 02:48:21 2018 adamy

	* build 212
	* libmbedtls integration/build option.
	* is_idle() mouse filter

Fri Oct 26 01:21:10 2018 adamy

	* Additional SLang compatiblity tweaks.
	* Ctrl-C / Ctrl-Break handler reimplemented/cleanup.

Thu Oct 25 23:25:17 2018 adamy

	* subshell exec tweaks; F2 menu support.
	* mc 4.8.21 solution/makefile changes published.
	* libtool enhancements;
		cmdfiles, decls and alloca checks.

Fri Oct 19 00:04:31 2018 adamy

	* libw32 merge/additional dll support.
	* owc 2.0 support; beta.
	* 2018
	* libtool cmdfiles, alloca and decls.
	* enhanced symlink/mount-point support;
		w32_reparse_read(), w32_stat(), w32_lstat(), w32_symlink(), w32_open(), w32_unlink()
	* w32_link() hard link support.
	* vio exec context; optimisation.
	* additional errno mappings.
	* w32_select mem leak.
	* getfsstat and getmntinfo.

Wed Sep 26 00:47:14 2018 adamy

	* build 209 - beta
	* symlink support enhancements
	* color256 emulation tweaks
	* window 10 console support
	* mc 4.8.21 merge

Thu Jun  9 21:26:18 2018 adamy

	* msvc 2015/2017 builds

Fri Mar 31 02:38:24 2017 adamy

	* console/slang video driver performance improvements.

Thu Mar 16 22:45:22 2017 adamy

	* Console2 and Windows 10 extended console detection.

Mon Mar 13 16:52:53 2017 adamy

	* build 205

	* mc-inno-setup.iss: packaged magic.mgc definitions.

Fri Mar 10 15:24:32 2017 adamy

	* removed several compiler warnings.

	* build scripts, libw32: aligned mcwin32 unistd.h/error with external projects.

	* split poll into w32_poll.c, imported w32_sockpair.c.

	* removed OWC -za99 CC option; possible issues, minor code changes.

Thu Mar  9 00:26:54 2017 adamy

	* build 204.

Wed Mar  8 01:17:24 2017 adamy

	* extfs.c / win32_utl.c

		- support execution of #! scripts; ignore file execution mode.
		- additional effort required, as ext implementation script assume a unix command shell,
			for example 'uzip' quotes shell meta characters.

	* sfs.ini

		- merged with 4.8.19