@@ -71,7 +71,7 @@ VS_VERSION_INFO VERSIONINFO
 
                                 VALUE "LegalCopyright",
                                         "Copyright (C) 2012 - 2019, Adam Young. All rights reserved. \n"
-                                        "Copyright (C) 1994 - 2018, Free Software Foundation, and others. \n"
+                                        "Copyright (C) 1994 - 2019, Free Software Foundation, and others. \n"
                                         "Copyright (C) 1990, 1993, The Regents of the University of California. \n"
                                         "Licensed under GNU General Public License version 3.0. \n"
                                         "This is free software; see the source for copying conditions. \n"
